--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body class="bg-blue-600 text-white flex items-center justify-center min-h-screen p-6">
   <div class="text-center max-w-md w-full">
     <img src="profile.png" alt="Bro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-lg object-cover" />
-    <h1 class="text-3xl font-bold mb-1">Bro 👑</h1>
+    <h1 class="text-3xl font-bold mb-1">JEROMEIBIZA 👑</h1>
     <p class="text-gray-200 mb-6">Affiliation | Casino | Poker</p>
     <div id="links" class="space-y-3"></div>
   </div>
