--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-blue-600 text-white flex items-center justify-center min-h-screen p-6">
-  <div class="text-center max-w-md w-full">
-    <img src="profile.png" alt="Bro" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-lg object-cover" />
-    <h1 class="text-3xl font-bold mb-1">JEROMEIBIZA 👑</h1>
-    <p class="text-gray-200 mb-6"> Casino | Poker</p>
-    <div id="links" class="space-y-3"></div>
-  </div>
+<div class="text-center max-w-md w-full">
+  <img src="profile.png" alt="jeromeibiza" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-lg object-cover" />
+  <h1 class="text-4xl sm:text-5xl font-bold mb-2">jeromeibiza 👑</h1>
+  <p class="text-lg sm:text-xl text-gray-100 mb-6">Affiliation | Casino | Poker</p>
+  <div id="links" class="space-y-3"></div>
+</div>
 
   <script>
     fetch('/api/links')
