--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-blue-600 text-white flex items-center justify-center min-h-screen p-6">
-<div class="text-center max-w-md w-full">
-  <img src="profile.png" alt="jeromeibiza" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-lg object-cover" />
-  <h1 class="text-4xl sm:text-5xl font-bold mb-2">jeromeibiza 👑</h1>
-  <p class="text-lg sm:text-xl text-gray-100 mb-6">Affiliation | Casino | Poker</p>
-  <div id="links" class="space-y-3"></div>
+<div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
+  <img src="profile.png" alt="jeromeibiza" class="w-36 h-36 sm:w-40 sm:h-40 rounded-full border-4 border-white shadow-lg object-cover mb-6" />
+  
+  <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold mb-4 leading-tight">
+    jeromeibiza 👑
+  </h1>
+
+  <p class="text-xl sm:text-2xl md:text-3xl text-gray-100 mb-10">
+    Affiliation | Casino | Poker
+  </p>
+
+  <div id="links" class="w-full max-w-md space-y-4"></div>
 </div>
+
 
   <script>
     fetch('/api/links')
