--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
   <img src="profile.png" alt="jeromeibiza" class="w-36 h-36 sm:w-40 sm:h-40 rounded-full border-4 border-white shadow-lg object-cover mb-6" />
   
-  <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold mb-4 leading-tight">
+  <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4 bg-blue-600">
+  <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
+  
+  <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold text-white mb-6 leading-tight tracking-tight">
     jeromeibiza 👑
   </h1>
 
-  <p class="text-xl sm:text-2xl md:text-3xl text-gray-100 mb-10">
+  <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
     Affiliation | Casino | Poker
   </p>
 
-  <div id="links" class="w-full max-w-md space-y-4"></div>
+  <div id="links" class="w-full max-w-md space-y-6"></div>
 </div>
 
 
