--- a/index.html
+++ b/index.html
@@ -23,21 +23,26 @@
   <div id="links" class="w-full max-w-md space-y-6"></div>
 </div>
 
+<script>
+  fetch('/api/links')
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById('links');
+      data.forEach(link => {
+        const a = document.createElement('a');
+        a.href = link.url;
+        a.innerText = `${link.emoji} ${link.label}`;
+        a.className = "block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
+        a.target = "_blank";
 
-  <script>
-    fetch('/api/links')
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById('links');
-        data.forEach(link => {
-          const a = document.createElement('a');
-          a.href = link.url;
-          a.innerText = `${link.emoji} ${link.label}`;
-          a.className = "block bg-white text-blue-600 font-bold px-4 py-2 rounded-xl hover:bg-gray-200 transition";
-          a.target = "_blank";
-          container.appendChild(a);
-        });
+        // 👉 Animation spéciale sur SAMBA SLOTS
+        if (link.label.includes("SAMBA SLOTS")) {
+          a.classList.add("animate-bounce");
+        }
+
+        container.appendChild(a);
       });
-  </script>
+    });
+</script>
 </body>
 </html>
