--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>jeromeibiza Links</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
 <body class="bg-blue-600 text-white flex items-center justify-center min-h-screen p-6">
   <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
     <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
@@ -35,3 +43,4 @@
       });
   </script>
 </body>
+</html>
