--- a/index.html
+++ b/index.html
@@ -20,27 +20,30 @@
 
     <div id="links" class="w-full max-w-md space-y-6"></div>
   </div>
+ <script>
+  fetch('/api/links')
+    .then(res => res.json())
+    .then(data => {
+      const container = document.getElementById('links');
+      data.forEach(link => {
+        const a = document.createElement('a');
+        a.href = link.url;
+        a.innerText = `${link.emoji} ${link.label}`;
+        a.className = "block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
+        a.target = "_blank";
 
-  <script>
-    fetch('/api/links')
-      .then(res => res.json())
-      .then(data => {
-        const container = document.getElementById('links');
-        data.forEach(link => {
-          const a = document.createElement('a');
-          a.href = link.url;
-          a.innerText = `${link.emoji} ${link.label}`;
-          a.className = "block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
-          a.target = "_blank";
+        // 👉 Ajout du bounce sur les 3 liens casino
+        if (
+          link.label.includes("SAMBA SLOTS") ||
+          link.label.includes("SHINY WILD") ||
+          link.label.includes("CASINO NIGHT")
+        ) {
+          a.classList.add("animate-bounce");
+        }
 
-          // 👉 Animation spéciale sur SAMBA SLOTS
-          if (link.label.includes("SAMBA SLOTS")) {
-            a.classList.add("animate-bounce");
-          }
-
-          container.appendChild(a);
-        });
+        container.appendChild(a);
       });
-  </script>
+    });
+</script>
 </body>
 </html>
