--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>jeromeibiza Links</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-600 text-white flex items-center justify-center min-h-screen p-6">
+<body class="bg-gradient-to-br from-blue-600 via-indigo-700 to-purple-800 text-white flex items-center justify-center min-h-screen p-6">
   <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
     <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
     
@@ -20,30 +20,31 @@
 
     <div id="links" class="w-full max-w-md space-y-6"></div>
   </div>
- <script>
-  fetch('/api/links')
-    .then(res => res.json())
-    .then(data => {
-      const container = document.getElementById('links');
-      data.forEach(link => {
-        const a = document.createElement('a');
-        a.href = link.url;
-        a.innerText = `${link.emoji} ${link.label}`;
-        a.className = "block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
-        a.target = "_blank";
 
-        // 👉 Ajout du bounce sur les 3 liens casino
-        if (
-          link.label.includes("SAMBA SLOTS") ||
-          link.label.includes("SHINY WILD") ||
-          link.label.includes("CASINO NIGHT")
-        ) {
-          a.classList.add("animate-bounce");
-        }
+  <script>
+    fetch('/api/links')
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById('links');
+        data.forEach(link => {
+          const a = document.createElement('a');
+          a.href = link.url;
+          a.innerText = `${link.emoji} ${link.label}`;
+          a.className = "block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
+          a.target = "_blank";
 
-        container.appendChild(a);
+          // 👉 Ajout du bounce sur les 3 liens casino
+          if (
+            link.label.includes("SAMBA SLOTS") ||
+            link.label.includes("SHINY WILD") ||
+            link.label.includes("CASINO NIGHT")
+          ) {
+            a.classList.add("animate-bounce");
+          }
+
+          container.appendChild(a);
+        });
       });
-    });
-</script>
+  </script>
 </body>
 </html>
