--- a/index.html
+++ b/index.html
@@ -41,34 +41,19 @@
     .then(res => res.json())
     .then(data => {
       const container = document.getElementById('links');
-      let delay = 0;
 
       data.forEach(link => {
         const a = document.createElement('a');
         a.href = link.url;
         a.target = "_blank";
-        a.className = "relative block bg-white text-blue-600 text-xl font-bold px-6 py-4 rounded-2xl hover:scale-105 hover:bg-yellow-100 transition-all duration-300 shadow-lg";
+        a.className = "block text-xl font-bold px-6 py-4 rounded-2xl transition-all duration-300 shadow-lg hover:scale-105";
 
-        // 🎰 Bounce en cascade pour les 3 casinos
-        if (
-          link.label.includes("SAMBA SLOTS") ||
-          link.label.includes("SHINY WILD") ||
-          link.label.includes("CASINO NIGHT")
-        ) {
-          a.classList.add("animate-bounce");
-          a.style.animationDelay = `${delay}s`;
-          a.style.animationDuration = "1s";
-          delay += 0.8;
-        }
-
-        // 🤑 Clignotement + Néon + Badge pour Discord
+        // 👑 Lien Discord → plus gros + bounce + fond flashy
         if (link.label.includes("Discord")) {
-          a.classList.add("animate-blink", "neon-discord");
-
-          const badge = document.createElement('span');
-          badge.innerText = "🔥";
-          badge.className = "absolute top-[-10px] right-[-10px] bg-red-500 text-white text-sm px-2 py-1 rounded-full shadow";
-          a.appendChild(badge);
+          a.className += " text-white text-2xl bg-gradient-to-r from-yellow-400 to-red-500 animate-bounce border-4 border-white";
+        } else {
+          // Les autres → standard
+          a.className += " bg-white text-blue-600 hover:bg-yellow-100";
         }
 
         a.innerText = `${link.emoji} ${link.label}`;
