--- a/index.html
+++ b/index.html
@@ -5,24 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>jeromeibiza Links</title>
   <script src="https://cdn.tailwindcss.com"></script>
-<style>
-  @keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
-  }
+  <style>
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
 
-  .animate-blink {
-    animation: blink 1s infinite;
-  }
+    .animate-blink {
+      animation: blink 1s infinite;
+    }
 
-  .neon-discord {
-    box-shadow: 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff;
-    border: 2px solid #0ff;
-  }
-</style>
-
+    .neon-discord {
+      box-shadow:
+        0 0 8px #0ff,
+        0 0 16px #0ff,
+        0 0 32px #0ff,
+        0 0 64px #0ff,
+        0 0 80px #0ff;
+      border: 3px solid #0ff;
+      transition: box-shadow 0.3s ease-in-out;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-br from-blue-600 via-indigo-700 to-purple-800 text-white flex items-center justify-center min-h-screen p-6">
+<body class="text-white flex items-center justify-center min-h-screen p-6 relative overflow-hidden">
+
+  <!-- 🎬 Fond vidéo -->
+  <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover z-[-1]">
+    <source src="vegas-background.mp4" type="video/mp4">
+  </video>
+
   <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
     <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
     
@@ -31,36 +42,35 @@
     </h1>
 
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
-      Casino | Poker
+      Affiliation | Casino | Poker
     </p>
 
-    <div id="links" class="w-full max-w-md space-y-6"></div>
+    <div id="links" class="w-full max-w-md space-y-6 z-10"></div>
   </div>
-<script>
-  fetch('/api/links')
-    .then(res => res.json())
-    .then(data => {
-      const container = document.getElementById('links');
 
-      data.forEach(link => {
-        const a = document.createElement('a');
-        a.href = link.url;
-        a.target = "_blank";
-        a.className = "block text-xl font-bold px-6 py-4 rounded-2xl transition-all duration-300 shadow-lg hover:scale-105";
+  <script>
+    fetch('/api/links')
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById('links');
 
-        // 👑 Lien Discord → plus gros + bounce + fond flashy
-        if (link.label.includes("Discord")) {
-          a.className += " text-white text-2xl bg-gradient-to-r from-yellow-400 to-red-500 animate-bounce border-4 border-white";
-        } else {
-          // Les autres → standard
-          a.className += " bg-white text-blue-600 hover:bg-yellow-100";
-        }
+        data.forEach(link => {
+          const a = document.createElement('a');
+          a.href = link.url;
+          a.target = "_blank";
+          a.className = "block text-xl font-bold px-6 py-4 rounded-2xl transition-all duration-300 shadow-lg hover:scale-105";
 
-        a.innerText = `${link.emoji} ${link.label}`;
-        container.appendChild(a);
+          // 🎯 Discord → plus gros, bounce, neon
+          if (link.label.includes("Discord")) {
+            a.className += " text-white text-2xl bg-gradient-to-r from-yellow-400 to-red-500 animate-bounce neon-discord border-4 border-white";
+          } else {
+            a.className += " bg-white text-blue-600 hover:bg-yellow-100";
+          }
+
+          a.innerText = `${link.emoji} ${link.label}`;
+          container.appendChild(a);
+        });
       });
-    });
-</script>
-
+  </script>
 </body>
 </html>
