--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- 🎬 Fond vidéo -->
   <video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover z-[-1]">
-    <source src="vegas-background.mp4" type="video/mp4">
+    <source src="vegas-background.mp4.mp4" type="video/mp4">
   </video>
 
   <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
