--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </h1>
 
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
-      Affiliation | Casino | Poker
+      Casino | Poker
     </p>
 
     <div id="links" class="w-full max-w-md space-y-6 z-10"></div>
