--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
   <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
     <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
     
-    <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold text-white mb-6 leading-tight tracking-tight">
-      jeromeibiza 👑
-    </h1>
+   <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold text-white mb-6 leading-tight tracking-tight drop-shadow-[0_2px_6px_rgba(0,0,0,0.7)] bg-gradient-to-r from-yellow-300 via-white to-yellow-300 bg-clip-text text-transparent">
+  jeromeibiza 👑
+</h1>
+
 
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
       Casino | Poker
