--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 <body class="text-white flex items-center justify-center min-h-screen p-6 relative overflow-hidden">
 
   <!-- 🎬 Fond vidéo -->
-<video autoplay muted loop playsinline class="fixed top-0 left-0 w-full h-full object-cover z-[-1] pointer-events-none">
+<video autoplay muted loop playsinline 
+  class="hidden md:block fixed top-0 left-0 w-full h-full object-cover z-[-1] pointer-events-none">
   <source src="vegas-background-noaudio.mp4" type="video/mp4">
 </video>
+
 
 
 
