--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" class="scroll-smooth">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,6 +50,7 @@
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
       Casino | Poker
     </p>
+<a href="#links" class="animate-bounce mt-4 text-3xl">⬇️</a>
 
     <div id="links" class="w-full max-w-md space-y-6 z-10"></div>
   </div>
