--- a/index.html
+++ b/index.html
@@ -35,18 +35,14 @@
   class="hidden md:block fixed top-0 left-0 w-full h-full object-cover z-[-1] pointer-events-none">
   <source src="vegas-background-noaudio.mp4" type="video/mp4">
 </video>
+<div class="flex flex-col items-center w-full text-center px-4 py-10">
+  <div id="links" class="w-full max-w-md space-y-6 z-10 mt-10 mb-32"></div>
 
-
-
-
-  <div class="flex flex-col items-center justify-center min-h-screen w-full text-center px-4">
     <img src="profile.png" alt="jeromeibiza" class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
     
    <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold text-white mb-6 leading-tight tracking-tight drop-shadow-[0_2px_6px_rgba(0,0,0,0.7)] bg-gradient-to-r from-yellow-300 via-white to-yellow-300 bg-clip-text text-transparent">
   jeromeibiza 👑
 </h1>
-
-
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
       Casino | Poker
     </p>
@@ -54,7 +50,6 @@
 
     <div id="links" class="w-full max-w-md space-y-6 z-10"></div>
   </div>
-
   <script>
     fetch('/api/links')
       .then(res => res.json())
