--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
       class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
 
     <!-- 👑 Nom -->
-    <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold text-white mb-6 leading-tight tracking-tight drop-shadow-[0_2px_6px_rgba(0,0,0,0.7)] bg-gradient-to-r from-yellow-300 via-white to-yellow-300 bg-clip-text text-transparent">
-      jeromeibiza 👑
-    </h1>
+ <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tight
+text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-white to-yellow-300 
+drop-shadow-[0_2px_6px_rgba(0,0,0,0.8)]">
+  jeromeibiza 👑
+</h1>
+
 
     <!-- 🎰 Sous-titre -->
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
