--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   <title>jeromeibiza Links</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    @keyframes glow {
+  0%, 100% {
+    text-shadow: 0 0 10px #fff, 0 0 20px #ffe066, 0 0 30px #ffd700;
+  }
+  50% {
+    text-shadow: 0 0 20px #fff, 0 0 40px #ffe066, 0 0 60px #ffd700;
+  }
+}
+
+.animate-glow {
+  animation: glow 2.5s ease-in-out infinite;
+}
+
     @keyframes blink {
       0%, 100% { opacity: 1; }
       50% { opacity: 0; }
@@ -44,10 +57,12 @@
       class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
 
     <!-- 👑 Nom -->
- <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tight
+<h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tight
 text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-white to-yellow-300 
-drop-shadow-[0_2px_6px_rgba(0,0,0,0.8)]">
+drop-shadow-[0_2px_6px_rgba(0,0,0,0.8)] animate-glow">
   jeromeibiza 👑
+</h1>
+
 </h1>
 
 
