--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>jeromeibiza Links</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
- @keyframes glow {
-  0%, 100% {
-    text-shadow: 0 0 4px #fff, 0 0 8px #ffe066, 0 0 12px #ffd700;
-  }
-  50% {
-    text-shadow: 0 0 6px #fff, 0 0 10px #ffe066, 0 0 16px #ffd700;
-  }
-}
+    @keyframes glow {
+      0%, 100% {
+        text-shadow: 0 0 4px #fff, 0 0 8px #ffe066, 0 0 12px #ffd700;
+      }
+      50% {
+        text-shadow: 0 0 6px #fff, 0 0 10px #ffe066, 0 0 16px #ffd700;
+      }
+    }
 
     @keyframes blink {
       0%, 100% { opacity: 1; }
@@ -35,16 +35,14 @@
       border: 3px solid #0ff;
       transition: box-shadow 0.3s ease-in-out;
     }
+
+    .animate-glow {
+      animation: glow 2.5s ease-in-out infinite;
+    }
   </style>
 </head>
 
 <body class="bg-gradient-to-br from-blue-700 via-purple-800 to-black text-white min-h-screen relative overflow-x-hidden">
-
-  <!-- 🎬 Fond vidéo pour ordi uniquement -->
-  <video autoplay muted loop playsinline 
-    class="hidden md:block fixed top-0 left-0 w-full h-full object-cover z-[-1] pointer-events-none">
-    <source src="vegas-background-noaudio.mp4" type="video/mp4">
-  </video>
 
   <div class="flex flex-col items-center w-full text-center px-4 py-10">
 
@@ -53,14 +51,11 @@
       class="w-40 h-40 sm:w-48 sm:h-48 rounded-full border-4 border-white shadow-xl object-cover mb-8" />
 
     <!-- 👑 Nom -->
-<h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tight
-text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-white to-yellow-300 
-drop-shadow-[0_2px_6px_rgba(0,0,0,0.8)] animate-glow">
-  jeromeibiza 👑
-</h1>
-
-</h1>
-
+    <h1 class="text-6xl sm:text-7xl md:text-8xl font-extrabold mb-6 leading-tight tracking-tight
+    text-transparent bg-clip-text bg-gradient-to-r from-yellow-300 via-white to-yellow-300 
+    drop-shadow-[0_2px_6px_rgba(0,0,0,0.8)] animate-glow">
+      jeromeibiza 👑
+    </h1>
 
     <!-- 🎰 Sous-titre -->
     <p class="text-2xl sm:text-3xl md:text-4xl text-gray-100 mb-10">
